--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/yellow"
+    android:background="@color/white"
     android:orientation="vertical"
     android:padding="10dp"
     tools:context=".MainActivity">
@@ -14,7 +14,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:background="@color/material_dynamic_primary100"
         android:backgroundTint="@color/yellow"
         android:fontFamily="@font/poppins_semibold"
         android:gravity="center"
@@ -74,7 +73,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="1"
-                android:layout_marginStart="@dimen/_10dp"
+                android:layout_marginStart="10dp"
+                android:textColor="@color/black"
                 android:text="@string/taskName"
                 android:textSize="15sp" />
 
@@ -82,10 +82,12 @@
                 android:id="@+id/task_name"
                 android:layout_width="290dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20sp"
+                android:layout_marginStart="20dp"
                 android:width="150dp"
                 android:autofillHints="Enter task name."
                 android:hint="@string/taskNameHint"
+                android:textColorHint="#78909C"
+                android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="italic"
                 tools:ignore="LabelFor,TextFields" />
@@ -100,7 +102,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="1"
-                android:layout_marginStart="@dimen/_10dp"
+                android:textColor="@color/black"
+                android:layout_marginStart="10dp"
                 android:text="@string/taskDes"
                 android:textSize="15sp" />
 
@@ -108,8 +111,9 @@
                 android:id="@+id/task_des"
                 android:layout_width="290dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20sp"
+                android:layout_marginStart="20dp"
                 android:width="150dp"
+                android:textColor="@color/black"
                 android:autofillHints="Enter task description."
                 android:hint="@string/taskDesHint"
                 android:textSize="20sp"
@@ -126,7 +130,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="1"
-                android:layout_marginStart="@dimen/_10dp"
+                android:layout_marginStart="10dp"
+                android:textColor="@color/black"
                 android:text="@string/taskPriority"
                 android:textSize="15sp" />
 
@@ -134,11 +139,12 @@
                 android:id="@+id/task_priority"
                 android:layout_width="290dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20sp"
+                android:layout_marginStart="20dp"
                 android:width="150dp"
                 android:autofillHints="@string/taskPriorityHint"
                 android:hint="@string/taskPriorityHint"
                 android:inputType="number"
+                android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="italic"
                 tools:ignore="LabelFor,TextFields" />
@@ -153,7 +159,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="1"
-                android:layout_marginStart="@dimen/_10dp"
+                android:layout_marginStart="10dp"
+                android:textColor="@color/black"
                 android:text="@string/taskDeadline"
                 android:textSize="15sp" />
 
@@ -161,11 +168,13 @@
                 android:id="@+id/task_deadline"
                 android:layout_width="290dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20sp"
+                android:layout_marginStart="20dp"
                 android:width="150dp"
                 android:autofillHints="@string/taskDeadlineHint"
                 android:hint="@string/taskDeadlineHint"
                 android:inputType="date"
+                android:textColor="@color/black"
+                android:textColorHint="#78909C"
                 android:textSize="20sp"
                 android:textStyle="italic"
                 tools:ignore="LabelFor,TextFields" />
@@ -176,7 +185,7 @@
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         android:layout_marginTop="80dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -210,7 +219,7 @@
             android:id="@+id/view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:backgroundTint="@color/peach"
             android:text="@string/view"
             android:textColor="@color/black"
@@ -220,7 +229,7 @@
             android:id="@+id/edit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:backgroundTint="@color/peach"
             android:text="@string/edit"
             android:textColor="@color/black"
@@ -230,7 +239,7 @@
             android:id="@+id/delete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:backgroundTint="@color/peach"
             android:text="@string/delete"
             android:textColor="@color/black"
