--- a/app/src/main/res/layout/custom_list.xml
+++ b/app/src/main/res/layout/custom_list.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:padding="16dp"
     android:gravity="center_horizontal"
     android:background="@color/white">
@@ -13,8 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         app:cardElevation="4dp"
         app:cardCornerRadius="8dp">
 
@@ -43,32 +43,25 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/textViewTaskDeadline"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:paddingBottom="8dp"
                     android:text="@string/taskDeadline"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="8dp"
-                    android:text="@string/taskPriority"
-                    android:layout_marginLeft="60dp"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:paddingBottom="8dp" />
 
                 <TextView
                     android:id="@+id/textViewTaskPriority"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingBottom="8dp"
                     android:text="@string/taskPriority"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+                    android:layout_marginStart="60dp"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:paddingBottom="8dp" />
             </LinearLayout>
 
             <TextView
@@ -78,7 +71,6 @@
                 android:text="@string/taskDes"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:paddingBottom="8dp"/>
-
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
