--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="green">#00FF00</color>
     <color name="blue">#5AB2FF</color>
-    <color name="yellow">#FFFF80</color>
+    <color name="yellow">#FFC107</color>
     <color name="peach">#FFAA80</color>
 </resources>
