--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
         android:fontFamily="@font/poppins_semibold"
         android:gravity="center"
         android:text="@string/labelName"
+        android:textColor="@color/black"
         android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
@@ -84,10 +85,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:width="150dp"
-                android:autofillHints="Enter task name."
-                android:hint="@string/taskNameHint"
-                android:textColorHint="#78909C"
                 android:textColor="@color/black"
+                android:autofillHints="Enter task description."
+                android:hint="@string/taskNameHint"
                 android:textSize="20sp"
                 android:textStyle="italic"
                 tools:ignore="LabelFor,TextFields" />
@@ -184,8 +184,8 @@
 
     <LinearLayout
         android:id="@+id/linearLayout2"
-        android:layout_width="wrap_content"
-        android:layout_height="200dp"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
         android:layout_marginTop="80dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -196,24 +196,24 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
-            android:layout_width="250dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
             android:layout_marginStart="30dp"
-            android:layout_height="wrap_content" />
+            android:layout_marginEnd="30dp" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="600dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.975">
 
         <Button
             android:id="@+id/view"
