--- a/app/src/main/res/layout/custom_list.xml
+++ b/app/src/main/res/layout/custom_list.xml
@@ -4,7 +4,6 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp"
     android:gravity="center_horizontal"
     android:background="@color/white">
 
@@ -12,9 +11,7 @@
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginTop="5dp"
         app:cardElevation="4dp"
         app:cardCornerRadius="8dp">
 
@@ -25,21 +22,30 @@
             android:padding="16dp"
             android:background="@drawable/boarder_radius">
 
-            <TextView
-                android:id="@+id/textViewTaskId"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/taskId"
-                android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                android:paddingBottom="8dp"/>
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/textViewTaskName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/taskName"
-                android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                android:paddingBottom="8dp"/>
+                <TextView
+                    android:id="@+id/textViewTaskId"
+                    android:layout_width="40dp"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="8dp"
+                    android:text="@string/taskId"
+                    android:textColor="@color/black"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+
+                <TextView
+                    android:id="@+id/textViewTaskName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="8dp"
+                    android:textColor="@color/black"
+                    android:text="@string/taskName"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -47,10 +53,28 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/textViewTaskDeadline"
-                    android:layout_width="150dp"
+                    android:layout_width="80dp"
                     android:layout_height="wrap_content"
                     android:text="@string/taskDeadline"
+                    android:textColor="@color/black"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:paddingBottom="8dp" />
+
+
+                <TextView
+                    android:id="@+id/textViewTaskDeadline"
+                    android:layout_width="80dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/taskDeadline"
+                    android:textColor="@color/black"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:paddingBottom="8dp" />
+
+                <TextView
+                    android:layout_width="80dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/taskPriority"
+                    android:textColor="@color/black"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                     android:paddingBottom="8dp" />
 
@@ -59,7 +83,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/taskPriority"
-                    android:layout_marginStart="60dp"
+                    android:textColor="@color/black"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                     android:paddingBottom="8dp" />
             </LinearLayout>
@@ -69,6 +93,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/taskDes"
+                android:textColor="@color/black"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:paddingBottom="8dp"/>
 
