--- a/app/src/main/res/layout/custom_list.xml
+++ b/app/src/main/res/layout/custom_list.xml
@@ -88,14 +88,32 @@
                     android:paddingBottom="8dp" />
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/textViewTaskDescription"
+            <LinearLayout
                 android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textViewTaskDescription"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="8dp"
+                    android:text="@string/taskDes"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textColor="@color/black" />
+
+
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/buttonDone"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/taskDes"
-                android:textColor="@color/black"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                android:paddingBottom="8dp"/>
+                android:layout_marginStart="200dp"
+                android:layout_marginTop="8dp"
+                android:backgroundTint="#35852E"
+                android:text="@string/done_button"
+                android:textColor="@color/white" />
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
